# keytally

./: .gitignore  LICENSE  README.md  README.zh-CN.md
app/: index.html  package-lock.json  package.json
app/src/: compute.ts  i18n.ts  keyboard.ts  layouts.ts  led-db.json  led-db.ts  main.ts  profiles.json  select.ts  styles.css  svg.ts  types.ts  views.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: flash.rs  hid.rs  lib.rs
collector/: Cargo.toml
collector/src/: activity.rs  claude_quota.rs  claude_today.rs  codex.rs  creds.rs  lib.rs  packet.rs  snapshot.rs  types.rs
docs/: protocol.md  protocol.zh-CN.md
docs/specs/: 2026-07-17-qmk-usage-lights-design.md
firmware/: README.md  README.zh-CN.md  build.sh
firmware/common/: usage_lights.c  usage_lights.h
firmware/skog_reboot/: config.h  keymap.c  rules.mk  usage_lights_config.h
firmware/think65v3/: keymap.c  rules.mk  usage_lights_config.h
firmware/think65v3-plain/: keymap.c
hooks/: README.md  claude-state-hook.sh  codex-notify-chain.sh  codex-notify.sh
