[package]
name = "qmk-usage-lights"
version = "0.1.0"
description = "QMK 键盘灯组显示 Claude/Codex 用量"
authors = ["ysw"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
collector = { path = "../../collector" }
hidapi = "2"
